@@ -1,5 +1,6 @@
 HEAD
 	+ Bug fix: do not duplicate includes with exclude-regexp
+	+ Add eBox Backup Storage strings
 1.3.15
 	+ Add custom module status section
 1.3.14
